# classify-satellite-images

./: .gitignore  docker-compose.yaml  landuse_classification.ipynb  landuse_segmentation.ipynb  pyproject.toml
mnt/: style.lua
