[project]
name = "classify-satellite-images"
version = "0.1.0"
description = ""
authors = [
    {name = "Isaac Boates",email = "iboates@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "supermercado (>=0.2.0,<0.3.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "geoalchemy2 (>=0.17.1,<0.18.0)",
    "geopandas (>=1.1.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
